--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@remix-run/express": "^1.7.0",
     "@remix-run/node": "^1.7.0",
     "@remix-run/react": "^1.7.2",
+    "@remix-validated-form/with-yup": "^2.0.1",
     "@supabase/supabase-js": "^1.35.6",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
@@ -26,7 +27,9 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.4.2",
-    "remix": "^1.7.2"
+    "remix": "^1.7.2",
+    "remix-validated-form": "^4.5.7",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.7.0",
